<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>agribot</name>
  <version>0.0.1</version>
  <description>ROS2 nodes for AgriBot</description>
  <maintainer email="lmn19052001@gmail.com">LeMartini</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>rosbridge_server</depend>
  <depend>python3-pyserial</depend>
  <depend>python3-pynmea2</depend>
  <depend>python3-numpy</depend>
  <depend>python3-scipy</depend>
  <depend>python3-pip</depend>
  <depend>nav_msgs</depend>
  <depend>robot_localization</depend>
  <depend>geographic_msgs</depend>
  <depend>python3-pyproj</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
